[project]
name = "rainy-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "google-cloud-secret-manager==2.0.0",
    'apache_beam[gcp]==2.40.0',
    'numcodecs==0.11.0',
    'pangeo-forge-recipes==0.9.1',
    'pandas',
    'gcsfs',
    'cfgrib',
    'immutabledict',
    'xarray-beam',
    'scipy',
    'fsspec==2023.4.0'   
]
